<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_local_reference"
            android:labelFor="@id/et_update_case_internal_ref"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/et_update_case_internal_ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:inputType="textCapCharacters"
            android:maxLines="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_external_reference"
            android:labelFor="@id/et_update_case_external_ref"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/et_update_case_external_ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:maxLines="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_type"
            android:labelFor="@id/spnr_update_case_type"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/spnr_update_case_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_date"
            android:labelFor="@id/et_update_case_date"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_update_case_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:layout_marginStart="20dp"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btn_update_case_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_case_choose_date"
                android:textColor="#fff"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_location"
            android:labelFor="@+id/et_update_case_location"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_update_case_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lbl_case_operation_name"
            android:labelFor="@+id/et_update_case_operation"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_update_case_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:maxLines="1"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/btn_update_case_update"
                android:layout_width="130dp"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:text="@string/btn_case_update_case"/>
            <Button
                android:id="@+id/btn_update_case_discard"
                android:layout_width="130dp"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:text="@string/btn_discard"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_update_case_update_goto_details"
            android:layout_width="290dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:text="@string/btn_case_update_case_goto_details"/>
    </LinearLayout>

</ScrollView>