<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="0dp">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="60dp">
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_case_list_details"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_case_details_case_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/tv_case_details_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondary"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-black"/>
                <TextView
                    android:id="@+id/tv_case_details_operation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/colorSecondary"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-black"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:text="@string/lbl_case_external_reference"/>
                <TextView
                    android:id="@+id/tv_case_details_external_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:text="@string/lbl_case_type"/>
                <TextView
                    android:id="@+id/tv_case_details_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:text="@string/lbl_case_location"/>
                <TextView
                    android:id="@+id/tv_case_details_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:text="@string/lbl_case_date"/>
                <TextView
                    android:id="@+id/tv_case_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondaryDark"/>
            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_case_details_share_case"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/baseline_download_24"
                    android:contentDescription="Share Icon"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/iv_case_details_edit_case"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/baseline_edit_24"
                    android:contentDescription="Edit Icon"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/iv_case_details_delete_case"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/baseline_delete_outline_24"
                    android:contentDescription="Delete Icon"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exhibits"
        android:textColor="#000"
        android:textSize="48sp"
        android:layout_marginLeft="15dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"/>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rv_case_details_exhibits"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>

<!--</ScrollView>-->